<resources>
    <string name="app_name">TURE Wallet</string>
    <string name="fb_app_id">730145060671124</string>
    <string name="fb_login_protocol_scheme">fb730145060671124</string>
    <string name="server_client_id">358105401754-mc1pt5si6ubo4e8bnhf22rgg1s50vni6.apps.googleusercontent.com</string>
    <string name="error_name_not_valid">Wrong name</string>
    <string name="error_email_not_valid">Email not valid</string>
    <string name="error_email_blocked">Email blocked</string>
    <string name="error_email_not_exist">Email not found</string>
    <string name="error_email_exists">Email already exists</string>
    <string name="error_password_no_number">At least one number is required</string>
    <string name="error_password_wrong_pass">Wrong password</string>
    <string name="error_password_new_error">Old and new are the same</string>
    <string name="error_passwords_not_match">Passwords do not match</string>
    <string name="error_password_no_upper">At least one upper case character is required</string>
    <string name="error_password_invalid_length">Password should be between 8 and 30 symbols</string>
    <string name="error_bad_request">Bad request</string>
    <string name="error_server_error">Server error</string>
    <string name="error_unknown_error">Unknown error</string>
    <string name="error_address_not_valid">Address not valid</string>
    <string name="error_not_enough_money">Not enough money</string>
    <string name="error_different_address">Different address</string>
    <string name="error_not_enough_money_on_market">Not enough money on market</string>
    <string name="error_not_found_exchange_rate">Not found exchange rate</string>
    <string name="error_exchange_not_in_range">Transaction amount should be between\n%s and %s.</string>
    <string name="error_not_enough_balance">Not enough balance(server may be, i`m not sure).</string>
    <string name="dialog_no_internet_title">No internet</string>
    <string name="dialog_no_internet_description">No internet description</string>
    <string name="dialog_email_timeout_title">Email timeout</string>
    <string name="dialog_email_timeout_description">Email timeout description</string>
    <string name="dialog_unknown_error_title">Oops! Something gone wrong!</string>
    <string name="dialog_unknown_error_description">Aliens have stolen some of our servers. Chasing them, but haven’t catch them yet. Please try again or come back later!</string>
    <string name="dialog_pass_mail_sent_title">Mail successfully sent</string>
    <string name="dialog_pass_mail_sent_description">Check your mailbox and follow the link to recover your password</string>
    <string name="dialog_pass_set_up_title">Password was successfully set up</string>
    <string name="dialog_pass_set_up_description">You have successfully set up new password.</string>
    <string name="dialog_registration_mail_sent_title">Email sent successfully</string>
    <string name="dialog_registration_mail_sent_description">Check the mail! We sent instruction how to confirm your account to your email address</string>
    <string name="dialog_not_verified_title">Your email is not verified</string>
    <string name="dialog_not_verified_description">The link we’ve sent you has been expired. Tap ‘Resend’ to get a new link to verify your account.</string>
    <string name="dialog_device_not_attached_title">Your device is not registered yet</string>
    <string name="dialog_device_not_attached_description">Do you want to register this device to your account?</string>
    <string name="dialog_device_attached_title">Device attached</string>
    <string name="dialog_device_attached_description">Device attached description</string>
    <string name="dialog_reset_pin_title">Reset pin</string>
    <string name="dialog_reset_pin_description">Reset pin description</string>
    <string name="dialog_attach_device_mail_sent_title">Email sent successfully</string>
    <string name="dialog_attach_device_mail_sent_description">Check the mail! We sent instruction how to attach device to your account to your email address</string>
    <string name="dialog_wrong_device_id_title">Wrong device id</string>
    <string name="dialog_wrong_device_id_description">Wrong device id description</string>
    <string name="dialog_email_not_provided_title">Email not provided</string>
    <string name="dialog_email_not_provided_description">You don`t have email in your social network</string>
    <string name="dialog_token_expired_title">Token expired</string>
    <string name="dialog_token_expired_description">Token expired description</string>
    <string name="dialog_exit_title">Sure to exit?</string>
    <string name="dialog_exit_description">Exit description</string>
    <string name="dialog_password_changed_title">Password was\nsuccessfully set up</string>
    <string name="dialog_password_changed_description">You have successfully set up\nnew password.</string>
    <string name="dialog_sign_out_title">Sure to sign out?</string>
    <string name="dialog_sign_out_description">After signing out you won’t be able to receive notifications from Wallet app</string>
    <string name="button_ok">Ok</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_resend">Resend</string>
    <string name="button_get_started">Get started</string>
    <string name="button_forgot_password">Forgot password?</string>
    <string name="button_register">Register</string>
    <string name="button_reset_password">Reset password</string>
    <string name="button_reset_pin">Reset pin</string>
    <string name="button_confirm_password">Confirm new password</string>
    <string name="button_set_up_quick_launch">Set up Quick Launch</string>
    <string name="button_set_up_pin_code">Set up PIN-code</string>
    <string name="button_set_up_fingerprint">Set up fingerprint launch</string>
    <string name="button_do_not_use">Do not use</string>
    <string name="button_forgot_pin">I forgot my PIN</string>
    <string name="button_sign_in_facebook">via Facebook</string>
    <string name="button_sign_in_google">via Google</string>
    <string name="button_all_transactions">See all transactions</string>
    <string name="button_send">Send</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_exchange">Exchange</string>
    <string name="button_exit">Exit</string>
    <string name="button_save">Save</string>
    <string name="button_sign_out">Sign out</string>
    <string name="button_sure">Yepp, sure!</string>
    <string name="button_not_now">No, not now</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_new_password">New password</string>
    <string name="hint_current_password">Current password</string>
    <string name="hint_repeat_password">Repeat password</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_address">Recipient`s address</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_amount_fiat">Equivalent amount in USD</string>
    <string name="hint_amount_remittance">Remittance amount</string>
    <string name="hint_amount_collection">Collection amount</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_send">Send</string>
    <string name="menu_exchange">Exchange</string>
    <string name="menu_receive">Receive</string>
    <string name="menu_menu">Menu</string>
    <string name="tab_sign_in">Sign in</string>
    <string name="tab_sign_up">Sign up</string>
    <string name="tab_all">All</string>
    <string name="tab_sent">Sent</string>
    <string name="tab_received">Received</string>
    <string name="text_splash_description">Multicurrency tool for easy operating\nwith your fiat \u0026 crypto funds</string>
    <string name="text_haven_t_got_account">Haven’t got account?</string>
    <string name="text_or">or Sign In</string>
    <string name="text_license_agreement">I accept the <a href="https://static.ture.global/terms_of_service.pdf">License Agreement</a> </string>
    <string name="text_policy_agreement">I accept the <a href="https://static.ture.global/privacy_policy.pdf">Privacy Policy</a> </string>
    <string name="text_recover_password">Enter email address where new\npassword recovering instructions \n will be sent to.</string>
    <string name="text_create_password">Create new password\nand confirm it.</string>
    <string name="text_sign_up">Sign up</string>
    <string name="text_sign_in">Sign in</string>
    <string name="text_pin_title_setup">Set up PIN-code</string>
    <string name="text_pin_description_setup">Enter 4-digit PIN-code</string>
    <string name="text_pin_title_confirm">Confirm PIN-code</string>
    <string name="text_pin_description_confirm">The codes entered must\nmatch each other</string>
    <string name="text_pin_title_enter">Hello, %s</string>
    <string name="text_pin_description_enter">Enter your PIN-code</string>
    <string name="text_quick_launch">Set up Quick Launch?</string>
    <string name="text_quick_launch_description">Choose the way to confirm\nyour identity</string>
    <string name="text_pin_code">Set up PIN-code?</string>
    <string name="text_fingerprint">Set up fingerprint launch?</string>
    <string name="text_last_transactions">Last transactions</string>
    <string name="text_commission">Commission</string>
    <string name="text_from">From</string>
    <string name="text_to">To</string>
    <string name="text_need_email">We need your email</string>
    <string name="text_no_transactions">You have no transactions.\nYet :)</string>
    <string name="text_transaction_sent">Transaction sent</string>
    <string name="text_transaction_received">Transaction received</string>
    <string name="text_pending">Pending</string>
    <string name="text_your_address">Your address</string>
    <string name="text_scan">Scan a barcode</string>
    <string name="text_fee">Fee</string>
    <string name="text_low">Low</string>
    <string name="text_high">High</string>
    <string name="text_hours">h</string>
    <string name="text_minutes">min</string>
    <string name="text_seconds">sec</string>
    <string name="text_confirm_sending">Confirm sending</string>
    <string name="text_confirm_exchanging">Confirm exchanging</string>
    <string name="text_address">Address</string>
    <string name="text_amount">Amount</string>
    <string name="text_transaction_fee">Transaction fee</string>
    <string name="text_total_to_send">Total to send</string>
    <string name="text_no_fee">Free</string>
    <string name="text_create_new_password">Create a new password</string>
    <string name="text_create_new_password_description">You’ll receive the link to your mail to\nconfirm password changing.</string>
    <string name="toolbar_password_recovery">Password recovery</string>
    <string name="toolbar_password_change">Change password</string>
    <string name="toolbar_transactions">Transactions</string>
    <string name="toolbar_accounts">Accounts</string>
    <string name="toolbar_send">Send</string>
    <string name="toolbar_receive">Receive</string>
    <string name="toolbar_exchange">Exchange</string>
    <string name="toolbar_edit_profile">Edit profile</string>
    <string name="toolbar_menu">Menu</string>
    <string name="preferences_change_password">Change password</string>
    <string name="preferences_edit_profile">Edit profile</string>
    <string name="preferences_app_info">App info</string>
    <string name="transition_account">TransitionAccount</string>
    <string name="transaction_type_sent">Sent</string>
    <string name="transaction_type_received">Received</string>
    <string name="toast_address_copied">Address copied to clipboard</string>
</resources>