<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.storiqa.storiqawallet.ui.password.reset.PasswordResetViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/toolbar_password_recovery" />

        <TextView
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="27dp"
            android:layout_marginRight="30dp"
            android:text="@string/text_need_email" />

        <TextView
            style="@style/RegularText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="17dp"
            android:layout_marginRight="30dp"
            android:text="@string/text_recover_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/Widget.Design.TextInputLayout.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            app:errorEnabled="true"
            app:errorText="@{viewModel.emailError}">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:hint="@string/hint_email"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.email}" />

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnResetPassword"
                style="@style/GradientButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="27dp"
                android:enabled="@{(viewModel.email.get().length > 0) ? true : false}"
                android:onClick="@{()->viewModel.onPasswordResetButtonClicked()}"
                android:text="@string/button_reset_password" />

        </FrameLayout>

    </LinearLayout>

</layout>