<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.storiqa.storiqawallet.ui.main.change_password.PasswordChangeViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/back"
            app:title="@string/toolbar_password_change" />

        <TextView
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:text="@string/text_create_new_password" />

        <TextView
            style="@style/RegularText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center_horizontal"
            android:text="@string/text_create_new_password_description" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPasswordCurrent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            app:errorEnabled="true"
            app:errorText="@{viewModel.passwordCurrentError}"
            style="@style/Widget.Design.TextInputLayout.Password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPasswordCurrent"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:hint="@string/hint_current_password"
                android:inputType="textPassword"
                android:nextFocusDown="@+id/etPassword"
                android:text="@={viewModel.passwordCurrent}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPasswordNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            app:errorEnabled="true"
            app:errorText="@{viewModel.passwordNewError}"
            style="@style/Widget.Design.TextInputLayout.Password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPasswordNew"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:hint="@string/hint_new_password"
                android:inputType="textPassword"
                android:nextFocusDown="@+id/etRepeatPassword"
                android:text="@={viewModel.passwordNew}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPasswordRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            app:errorEnabled="true"
            app:errorText="@{viewModel.passwordRepeatError}"
            style="@style/Widget.Design.TextInputLayout.Password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPasswordRepeat"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:hint="@string/hint_repeat_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:text="@={viewModel.passwordRepeat}" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom">

            <Button
                android:id="@+id/btnConfirmPassword"
                style="@style/GradientButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:enabled="@{viewModel.passwordCurrent.get().length > 0 &amp;&amp; viewModel.passwordNew.get().length > 0 &amp;&amp; viewModel.passwordRepeat.get().length > 0}"
                android:onClick="@{()->viewModel.onConfirmButtonClicked()}"
                android:text="@string/button_confirm_password" />

            <TextView
                android:id="@+id/btnCancel"
                style="@style/BorderlessButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:onClick="@{() -> viewModel.onCancelClicked()}"
                android:text="@string/button_cancel"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </LinearLayout>

</layout>