<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/toolbar_password_recovery" />

    <TextView
        android:id="@+id/textView8"
        style="@style/recoveryMessage"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_recover_password" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp">

        <EditText
            android:id="@+id/etEmail"
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/yourEmail"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnResetPassword"
            style="@style/signButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="27dp"
            android:text="@string/button_reset_password" />
    </FrameLayout>

</LinearLayout>

