<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.storiqa.storiqawallet.ui.dialogs.exchange.ExchangeConfirmationViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_dialog"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_exchange" />

        <TextView
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_confirm_sending" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                style="@style/RegularText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:gravity="start"
                android:text="@string/text_from" />

            <TextView
                style="@style/HighlightedText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.remittanceAccount}"
                tools:text="STQ account " />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@{viewModel.remittanceAmount}"
            android:textColor="@color/text_highlighted"
            android:textSize="20sp"
            tools:text="10402.22 STQ" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                style="@style/RegularText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginRight="5dp"
                android:text="@string/text_to" />

            <TextView
                style="@style/HighlightedText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.collectionAccount}"
                tools:text="BTC account" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@{viewModel.collectionAmount}"
            android:textColor="@color/text_highlighted"
            android:textSize="20sp"
            tools:text="0.082 BTC" />

        <Button
            style="@style/GradientButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:onClick="@{()->viewModel.onConfirmButtonClicked()}"
            android:text="@string/button_confirm" />

        <TextView
            style="@style/BorderlessButton.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="@{()->viewModel.onCancelButtonClicked()}"
            android:text="@string/button_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

</layout>